--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -1,94 +1,130 @@
-.button-comp,
-.button-comp:after {
+@import "../audioPlayer/AudioPlayer";
+
+.button-comp {
   max-width: fit-content;
-  background: linear-gradient(45deg, rgba(255, 0, 128, 0.8) 5%, rgba(255, 0, 128, 0.8) 5%);
-  letter-spacing: 3px;
-  box-shadow: 0 0 0 rgba(255, 255, 255, 1);
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  border-radius: 30px;
-}
-
-.button-comp:after {
-  --slice-0: inset(50% 50% 50% 50%);
-  --slice-1: inset(80% -6px 0 0);
-  --slice-2: inset(50% -6px 30% 0);
-  --slice-3: inset(10% -6px 85% 0);
-  --slice-4: inset(40% -6px 43% 0);
-  --slice-5: inset(80% -6px 5% 0);
-
-  content: '';
+  width: 100%;
+  background-color: rgba(255, 0, 128, 0.8);
+  border: 4px solid rgba(255, 255, 255, .75);
+  border-radius: 50px;
+  position: relative;
   display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: linear-gradient(45deg, transparent 3%, #00E6F6 3%, #00E6F6 5%, rgba(255, 0, 128, 0.8) 5%);
-  text-shadow: -3px -3px 0px #F8F005, 3px 3px 0px #00E6F6;
-  clip-path: var(--slice-0);
-}
+  box-shadow: 0 0 25px 3px rgba(255, 0, 128, 0.8);
 
-.button-comp:hover:after {
-  animation: 1s glitch;
-  animation-timing-function: steps(2, end);
-}
-
-.button-comp:disabled {
-  pointer-events: none;
-}
-
-@keyframes glitch {
-  0% {
-    clip-path: var(--slice-1);
-    transform: translate(-20px, -10px);
-  }
-  10% {
-    clip-path: var(--slice-3);
-    transform: translate(10px, 10px);
-  }
-  20% {
-    clip-path: var(--slice-1);
-    transform: translate(-10px, 10px);
-  }
-  30% {
-    clip-path: var(--slice-3);
-    transform: translate(0px, 5px);
-  }
-  40% {
-    clip-path: var(--slice-2);
-    transform: translate(-5px, 0px);
-  }
-  50% {
-    clip-path: var(--slice-3);
-    transform: translate(5px, 0px);
-  }
-  60% {
-    clip-path: var(--slice-4);
-    transform: translate(5px, 10px);
-  }
-  70% {
-    clip-path: var(--slice-2);
-    transform: translate(-10px, 10px);
-  }
-  80% {
-    clip-path: var(--slice-5);
-    transform: translate(20px, -10px);
-  }
-  90% {
-    clip-path: var(--slice-1);
-    transform: translate(-10px, 0px);
-  }
-  100% {
-    clip-path: var(--slice-1);
-    transform: translate(0);
+  &:hover:before {
+    content: "";
+    position: absolute;
+    width: 150%;
+    height: 150%;
+    -webkit-animation-delay: 0s;
+    animation-delay: 0s;
+    -webkit-animation: pulsate1 2s;
+    animation: pulsate1 2s;
+    -webkit-animation-direction: forwards;
+    animation-direction: forwards;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-timing-function: steps;
+    animation-timing-function: steps;
+    opacity: 1;
+    border-radius: 50px;
+    border: 4px solid rgba(255, 255, 255, .75);
+    top: -30%;
+    left: -30%;
+    background: rgba(198, 16, 0, 0);
   }
 }
 
-@media (min-width: 768px) {
-  .button-comp,
-  .button-comp:after {
-    max-width: 250px;
-  }
-}
+//.button-comp,
+//.button-comp:after {
+//  max-width: fit-content;
+//  background: linear-gradient(45deg, rgba(255, 0, 128, 0.8) 5%, rgba(255, 0, 128, 0.8) 5%);
+//  letter-spacing: 3px;
+//  box-shadow: 0 0 0 rgba(255, 255, 255, 1);
+//  user-select: none;
+//  -webkit-user-select: none;
+//  touch-action: manipulation;
+//  border-radius: 30px;
+//}
+//
+//.button-comp:after {
+//  --slice-0: inset(50% 50% 50% 50%);
+//  --slice-1: inset(80% -6px 0 0);
+//  --slice-2: inset(50% -6px 30% 0);
+//  --slice-3: inset(10% -6px 85% 0);
+//  --slice-4: inset(40% -6px 43% 0);
+//  --slice-5: inset(80% -6px 5% 0);
+//
+//  content: '';
+//  display: block;
+//  position: absolute;
+//  top: 0;
+//  left: 0;
+//  right: 0;
+//  bottom: 0;
+//  background: linear-gradient(45deg, transparent 3%, #00E6F6 3%, #00E6F6 5%, rgba(255, 0, 128, 0.8) 5%);
+//  text-shadow: -3px -3px 0px #F8F005, 3px 3px 0px #00E6F6;
+//  clip-path: var(--slice-0);
+//}
+//
+//.button-comp:hover:after {
+//  animation: 1s glitch;
+//  animation-timing-function: steps(2, end);
+//}
+//
+//.button-comp:disabled {
+//  pointer-events: none;
+//}
+//
+//@keyframes glitch {
+//  0% {
+//    clip-path: var(--slice-1);
+//    transform: translate(-20px, -10px);
+//  }
+//  10% {
+//    clip-path: var(--slice-3);
+//    transform: translate(10px, 10px);
+//  }
+//  20% {
+//    clip-path: var(--slice-1);
+//    transform: translate(-10px, 10px);
+//  }
+//  30% {
+//    clip-path: var(--slice-3);
+//    transform: translate(0px, 5px);
+//  }
+//  40% {
+//    clip-path: var(--slice-2);
+//    transform: translate(-5px, 0px);
+//  }
+//  50% {
+//    clip-path: var(--slice-3);
+//    transform: translate(5px, 0px);
+//  }
+//  60% {
+//    clip-path: var(--slice-4);
+//    transform: translate(5px, 10px);
+//  }
+//  70% {
+//    clip-path: var(--slice-2);
+//    transform: translate(-10px, 10px);
+//  }
+//  80% {
+//    clip-path: var(--slice-5);
+//    transform: translate(20px, -10px);
+//  }
+//  90% {
+//    clip-path: var(--slice-1);
+//    transform: translate(-10px, 0px);
+//  }
+//  100% {
+//    clip-path: var(--slice-1);
+//    transform: translate(0);
+//  }
+//}
+//
+//@media (min-width: 768px) {
+//  .button-comp,
+//  .button-comp:after {
+//    max-width: 250px;
+//  }
+//}
