--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -13,8 +13,8 @@
   &:hover:before {
     content: "";
     position: absolute;
-    width: 150%;
-    height: 150%;
+    width: 100%;
+    height: 100%;
     -webkit-animation-delay: 0s;
     animation-delay: 0s;
     -webkit-animation: pulsate1 2s;
@@ -28,8 +28,10 @@
     opacity: 1;
     border-radius: 50px;
     border: 4px solid rgba(255, 255, 255, .75);
-    top: -30%;
-    left: -30%;
+    //top: -30%;
+    //left: -30%;
+    top: 0;
+    left: 0;
     background: rgba(198, 16, 0, 0);
   }
 }
