--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -1,4 +1,4 @@
-@import "../audioPlayer/AudioPlayer";
+//@import "../audioPlayer/AudioPlayer";
 
 .button-comp {
   max-width: fit-content;
@@ -10,29 +10,47 @@
   display: block;
   box-shadow: 0 0 25px 3px rgba(255, 0, 128, 0.8);
 
-  &:hover:before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
+  &:hover {
+    -webkit-animation: zoom-in 5s;
+    animation: zoom-in 5s;
     -webkit-animation-delay: 0s;
     animation-delay: 0s;
-    -webkit-animation: pulsate1 2s;
-    animation: pulsate1 2s;
     -webkit-animation-direction: forwards;
     animation-direction: forwards;
-    -webkit-animation-iteration-count: infinite;
-    animation-iteration-count: infinite;
-    -webkit-animation-timing-function: steps;
-    animation-timing-function: steps;
-    opacity: 1;
-    border-radius: 50px;
-    border: 4px solid rgba(255, 255, 255, .75);
-    //top: -30%;
-    //left: -30%;
-    top: 0;
-    left: 0;
-    background: rgba(198, 16, 0, 0);
+  }
+
+  //&:hover:before {
+  //  content: "";
+  //  position: absolute;
+  //  width: 100%;
+  //  height: 100%;
+  //  -webkit-animation-delay: 0s;
+  //  animation-delay: 0s;
+  //  -webkit-animation: pulsate1 2s;
+  //  animation: pulsate1 2s;
+  //  -webkit-animation-direction: forwards;
+  //  animation-direction: forwards;
+  //  -webkit-animation-iteration-count: infinite;
+  //  animation-iteration-count: infinite;
+  //  -webkit-animation-timing-function: steps;
+  //  animation-timing-function: steps;
+  //  opacity: 1;
+  //  border-radius: 50px;
+  //  border: 4px solid rgba(255, 255, 255, .75);
+  //  //top: -30%;
+  //  //left: -30%;
+  //  top: 0;
+  //  left: 0;
+  //  background: rgba(198, 16, 0, 0);
+  //}
+}
+
+@keyframes zoom-in {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.2);
   }
 }
 
