--- a/src/components/banner/Banner.scss
+++ b/src/components/banner/Banner.scss
@@ -3,7 +3,16 @@
 .banner {
 
   &-right__side {
-    background-color: rgba(0, 0, 0, .4);
+    .blur-bg {
+      background-color: rgba(0, 0, 0, .4);
+      filter: blur(4px);
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+    }
 
     &-container {
       max-width: 200px;
